--- a/电商小票打印.md
+++ b/电商小票打印.md
@@ -4,7 +4,7 @@
 	user:"string",//用户名
 	ukey:"string",//user对应的密钥
 	sn:"string",//打印机编号
-	qrcode:"string"//二维码内容
+	qrcode:"string",//二维码内容
 	orderArr:[["string","string"]],//二维数组，二维码下的键值信息
 	commodities:[["string","string","string"]],//商品列表，每个数组内三个参数分别是“商品名称”，“商品价格”，“商品数量”不用加金钱符
 	price:[["string","string"]],//结算价格，前一个参数是价格前的信息，如"xx优惠",没有填空字符串
