--- a/电商小票打印.md
+++ b/电商小票打印.md
@@ -8,6 +8,8 @@
 	orderArr:[["string","string"]],//二维数组，二维码下的键值信息
 	commodities:[["string","string","string"]],//商品列表，每个数组内三个参数分别是“商品名称”，“商品价格”，“商品数量”不用加金钱符
 	price:[["string","string"]],//结算价格，前一个参数是价格前的信息，如"xx优惠",没有填空字符串
-	contactInfo:[["string","string"]]//联系我们部分的内容键值信息
+	contactInfo:[["string","string"]],//联系我们部分的内容键值信息
+	cmName:"string",//商户名
+	address:"string"//地址
 }
 ```
