--- a/表单接口.md
+++ b/表单接口.md
@@ -84,7 +84,9 @@ itemNum:Number //获取的数量
 action:"getOriginList",
 data:{
 offset:Number,//从库的第n个开始获取
-itemNum:Number //获取的数量
+itemNum:Number, //获取的数量
+sortType:Number, //1更新时间升序，2更新时间降序，3创建时间升序，4创建时间降序
+name:String //按名称搜索，不填则拉全部
 }
 
 回包:
