--- a/表单接口.md
+++ b/表单接口.md
@@ -66,7 +66,8 @@ action:"getSubmits",
 data:{
 formTemplateId:Number,//表单模板数据ID
 offset:Number,//从库的第n个开始获取
-itemNum:Number //获取的数量
+itemNum:Number, //获取的数量
+uuid:Number // 用户唯一身份标识
 }
 
 回包:
