--- a/表单接口.md
+++ b/表单接口.md
@@ -3,6 +3,9 @@
 ### 获取表单模板列表
 参数：
 action:"getFormList",
+data:{
+	uuid:Number // 用户唯一身份标识
+}
 
 回包:
 ```javascript
@@ -20,7 +23,8 @@ action:"createBITemplate",
 data:{
 formTemplateId:Number,//表单模板的数据ID
 OriginName:String,
-description:String
+description:String,
+uuid:Number // 用户唯一身份标识
 }
 
 回包:
@@ -87,6 +91,7 @@ data:{
 offset:Number,//从库的第n个开始获取
 itemNum:Number, //获取的数量
 sortType:Number, //1更新时间升序，2更新时间降序，3创建时间升序，4创建时间降序
+uuid:Number, // 用户唯一身份标识
 name:String //按名称搜索，不填则拉全部
 }
 
